apps/servicex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicex
  namespace: servicex
  labels:
    app: servicex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicex
  template:
    metadata:
      labels:
        app: servicex
    spec:
      containers:
        - name: servicex-container
          image: 201076423/cleverbit:s2s
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: secret-volume
              mountPath: /app/kpf/secret
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: secret-volume
          secret:
            secretName: servicex-secret
