apps/servicex/x-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicex-service
  namespace: servicex
spec:
  type: ClusterIP
  selector:
    app: servicex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
