apps/servicex/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicex-gateway
  namespace: servicex
spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cb-tls
      hosts:
        - "servicex.cb-interview.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicex
  namespace: servicex
spec:
  hosts:
    - "servicex.cb-interview.com"
  gateways:
    - servicex-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: servicex-service
            port:
              number: 80
